--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,42 +1,37 @@
-name: Android Release
+# This is a basic workflow to help you get started with Actions
+name: CI
 
-# 1
+# Controls when the workflow will run
 on:
-  # 2
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ "master" ]
+    branches: [master]
+    paths-ignore:
+      - '**/README.md'
   pull_request:
-    branches: [ "master" ]
+    branches: [master]
 
-  # 3
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# 4
+  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # 5
+  # This workflow contains a single job called "build"
   build:
-    # 6
+    name: flutter build
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # 7
+    env:
+      JAVA_VERSION: "11.0"
+      FLUTTER_VERSION: "2.5.3"
     steps:
-      # 8
-      - uses: actions/checkout@v3
-      # 9
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
-          distribution: 'zulu'
-          java-version: "12.x"
-      # 10   
+          java-version: $
       - uses: subosito/flutter-action@v2
         with:
-          # 11
-          flutter-version: "3.7.7"
-          channel: 'stable'
-      # 12
-      - name: Get dependencies
-        run: flutter pub get
-
-      # Runs a set of commands using the runners shell
-      - name: Start release build
-        run: flutter build appbundle
+          flutter-version: $
+      - run: flutter pub get
+      - run: flutter analyze
+      - run: flutter test
