--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Setup Flutter SDK
         uses: flutter-actions/setup-flutter@v2
         with:
-          channel: stable
-          version: 3.0.2
+          channel: beta
+          version: 3.13.0
 
       - name: Install dependencies
         run: flutter pub get
